<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search_win_white"
        app:theme="@style/ToolbarThemeWhite"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_mybooks"
        app:showAsAction="always"
        android:icon="@drawable/heart_white"
        app:theme="@style/ToolbarThemeWhite"
        android:title="@string/mybooks"/>

    <item
        android:id="@+id/action_logout"
        app:showAsAction="always"
        android:icon="@drawable/logout_white"
        app:theme="@style/ToolbarThemeWhite"
        android:title="@string/logout"/>

</menu>