<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kimgo.kimgouweleeuw_pset6.MyBooksActivity">

    <TextView
        android:id="@+id/myBooksText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mybooks"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/read" />

    <Button
        android:id="@+id/toReadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/toread" />

</LinearLayout>
